# stalks_remapper

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  RELEASE.md
.github/workflows/: cmake-single-platform.yml
include/: button_state.hpp  direct_input_wrapper.hpp  gamepad_emulator.hpp  gamepad_state.hpp  joystick.hpp
src/: button_state.cpp  direct_input_wrapper.cpp  gamepad_emulator.cpp  gamepad_state.cpp  joystick.cpp  main.cpp
